--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,6 +54,7 @@
         "thread": "cpp",
         "cinttypes": "cpp",
         "typeinfo": "cpp",
-        "xlocale": "cpp"
+        "xlocale": "cpp",
+        "mutex": "cpp"
     }
 }
